@@ -271,7 +271,7 @@ public class Project implements ResourceFactory {
     public Project createSubProject() {
         Project subProject = null;
         try {
-            subProject = (getClass().newInstance());
+            subProject = getClass().getDeclaredConstructor().newInstance();
         } catch (final Exception e) {
             subProject = new Project();
         }
@@ -642,11 +642,21 @@ public class Project implements ResourceFactory {
 
     /**
      * Return a copy of the properties table.
-     * @return a hashtable containing all properties
-     *         (including user properties).
+     * @return a hashtable containing all properties (including user
+     *         properties) known to the project directly, does not
+     *         contain local properties.
      */
     public Hashtable<String, Object> getProperties() {
         return PropertyHelper.getPropertyHelper(this).getProperties();
+    }
+
+    /**
+     * Returns the names of all known properties.
+     * @since 1.10.9
+     * @return the names of all known properties including local user and local properties.
+     */
+    public Set<String> getPropertyNames() {
+        return PropertyHelper.getPropertyHelper(this).getPropertyNames();
     }
 
     /**
@@ -1219,11 +1229,11 @@ public class Project implements ResourceFactory {
             }
             log("Attempting to create object of type " + classname, MSG_DEBUG);
             try {
-                o = Class.forName(classname, true, coreLoader).newInstance();
+                o = Class.forName(classname, true, coreLoader).getDeclaredConstructor().newInstance();
             } catch (final ClassNotFoundException seaEnEfEx) {
                 //try the current classloader
                 try {
-                    o = Class.forName(classname).newInstance();
+                    o = Class.forName(classname).getDeclaredConstructor().newInstance();
                 } catch (final Exception ex) {
                     log(ex.toString(), MSG_ERR);
                 }
