@@ -105,11 +105,11 @@ public final class JspCompilerAdapterFactory {
         throws BuildException {
         try {
             Class<? extends JspCompilerAdapter> c = classloader.findClass(className).asSubclass(JspCompilerAdapter.class);
-            return c.newInstance();
+            return c.getDeclaredConstructor().newInstance();
         } catch (ClassNotFoundException cnfe) {
-            throw new BuildException(className + " can\'t be found.", cnfe);
+            throw new BuildException(className + " can't be found.", cnfe);
         } catch (ClassCastException cce) {
-            throw new BuildException(className + " isn\'t the classname of "
+            throw new BuildException(className + " isn't the classname of "
                                      + "a compiler adapter.", cce);
         } catch (Throwable t) {
             // for all other possibilities
